--- a/.github/workflows/strict.yml
+++ b/.github/workflows/strict.yml
@@ -28,4 +28,6 @@ jobs:
     - uses: reviewdog/action-setup@v1
     - name: run tsc
       run: |
-        yarn tsc --project tsconfig.strict.json --noEmit | reviewdog -f=tsc -diff="git diff master" -tee
+        yarn tsc --project tsconfig.strict.json --noEmit | reviewdog -f=tsc -diff="git diff master" -reporter=github-pr-check
+      env:
+        REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
