--- a/.github/workflows/strict.yml
+++ b/.github/workflows/strict.yml
@@ -3,7 +3,9 @@ name: CI
 on:
   push:
     branches:
-      - "**"
+      - master
+  pull_request:
+      types: [opened, synchronize, reopened]
 
 jobs:
   lint:
