--- a/.github/workflows/strict.yml
+++ b/.github/workflows/strict.yml
@@ -28,8 +28,15 @@ jobs:
       env:
         CI: true
     - uses: reviewdog/action-setup@v1
+
     - name: run tsc
       run: |
         yarn tsc --project tsconfig.strict.json --noEmit | reviewdog -f=tsc -diff="git diff master" -reporter=github-pr-check
+      env:
+        REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: run tsc
+      run: |
+        yarn eslint --config ./.eslintrc.strict.js --ext .js,.ts --ignore-path .gitignore . | reviewdog -f=eslint -diff="git diff master" -reporter=github-pr-check
       env:
         REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
