--- a/.github/workflows/strict.yml
+++ b/.github/workflows/strict.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Strict CI
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
       types: [opened, synchronize, reopened]
 
 jobs:
-  lint:
+  strict-lint:
 
     runs-on: ubuntu-latest
 
@@ -29,13 +29,13 @@ jobs:
         CI: true
     - uses: reviewdog/action-setup@v1
 
-    - name: run tsc
+    - name: run tsc strict
       run: |
         yarn tsc --project tsconfig.strict.json --noEmit | reviewdog -f=tsc -diff="git diff master" -reporter=github-pr-check
       env:
         REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: run tsc
+    - name: run eslint strict
       run: |
         yarn eslint --config ./.eslintrc.strict.js --ext .js,.ts --ignore-path .gitignore . | reviewdog -f=eslint -diff="git diff master" -reporter=github-pr-check
       env:
