--- a/.github/workflows/strict.yml
+++ b/.github/workflows/strict.yml
@@ -31,12 +31,12 @@ jobs:
 
     - name: run tsc strict
       run: |
-        yarn tsc --project tsconfig.strict.json --noEmit | reviewdog -f=tsc -diff="git diff master" -reporter=github-pr-check
+        yarn tsc --project tsconfig.strict.json --noEmit | reviewdog -f=tsc -diff="git diff master" -reporter=github-pr-check -fail-on-error -filter-mode=file
       env:
         REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: run eslint strict
       run: |
-        yarn eslint --config ./.eslintrc.strict.js --ext .js,.ts --ignore-path .gitignore . | reviewdog -f=eslint -diff="git diff master" -reporter=github-pr-check
+        yarn eslint --config ./.eslintrc.strict.js --ext .js,.ts --ignore-path .gitignore . | reviewdog -f=eslint -diff="git diff master" -reporter=github-pr-check -fail-on-error -filter-mode=file
       env:
         REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
