remove -fail-on-error

--- a/.github/workflows/strict.yml
+++ b/.github/workflows/strict.yml
@@ -31,12 +31,12 @@ jobs:
 
     - name: run tsc strict
       run: |
-        reviewdog -runners=tsc -diff="git diff master" -fail-on-error -reporter=github-pr-check -filter-mode=file
+        reviewdog -runners=tsc -diff="git diff master" -reporter=github-pr-check -filter-mode=file
       env:
         REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: run eslint strict
       run: |
-        reviewdog -runners=eslint -diff="git diff master" -fail-on-error -reporter=github-pr-check -filter-mode=file
+        reviewdog -runners=eslint -diff="git diff master" -reporter=github-pr-check -filter-mode=file
       env:
         REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
